# Blow-Molding

./: CMakeLists.txt  README.md  TODO-Backend.txt  TODO.txt  main.cpp  main.qml  qml.qrc
docs/: Protocol.txt  Steps.txt
include/InjectionMolding/: Addresses.h  AlarmItem.h  AlarmModel.h  Engine.h  Fps.h  Registerations.h  SerialConnection.h  SerialGlobal.h  ServoUnions.h  abstractmodbusdevice.h  modbuscom.h  plcioitem.h  plciomodel.h  plcmodbusdevice.h  servomodbusdevice.h  stepitem.h  stepmodel.h
plc/: Communication.dvp  InjectionMolding.dvp
qml/: AlarmFooter.qml  AlarmTable.qml  AnalogStatus.qml  AppHeader.qml  AppStatusIndicators.qml  AxisControlPanel.qml  BackgroundOverlay.qml  BorderRectangle.qml  CircularGaugeDarkStyle.qml  CoilsStep.qml  ComPopup.qml  ControlPanel.qml  CusCircularGauge.qml  CusComboBox.qml  CusDelayButton.qml  CusPopup.qml  CusScrollBar.qml  CusSlider.qml  CusTableView.qml  DelayEditBox.qml  DigitalIndicators.qml  DropDown.qml  GaugePane.qml  GlobalUtils.js  GotoPosControl.qml  GotoPosPanel.qml  HomePage.qml  HomingControl.qml  HomingPanel.qml  IOsCheckBox.qml  IconicButton.qml  IconicToggle.qml  InterruptConfigView.qml  InterruptPopup.qml  ItemGauge.qml  Joystick.qml  JoystickButton.qml  LoginPopup.qml  MainForm.qml  ManualPage.qml  (+40 more)
servo/: servo-x-params.par
src/: abstractmodbusdevice.cpp  modbuscom.cpp  plcioitem.cpp  plciomodel.cpp  plcmodbusdevice.cpp  servomodbusdevice.cpp  stepitem.cpp  stepmodel.cpp
